modifie user apis and swagger
